[package]
name = "afseq"
version = "0.3.0"
edition = "2021"
description = "Experimental, dynamic, imperative and functional music sequence generator for Rust and Lua"
authors = ["Eduard Müller <mail@emuell.net>"]
exclude = ["assets", "examples"]
categories = ["audio", "midi", "sequencer"]

[dependencies]
# required
lazy_static = { version = "^1.4" }
anyhow = { version = "^1.0" }
paste = { version = "^1.0" }
derive_more = { version = "^0.99" }
log = { version = "^0.4" }
simplelog = { version = "^0.12" }
rand = { version = "0.8.5" }
rand_xoshiro = { version = "0.6.0" }
fraction = { version = "0.15.2" }
pest = { version = "2.7.8" }
pest_derive = { version = "2.7.8" }
# optional -> dhat-profiler
dhat = { version = "0.3.2", optional = true }
# optional -> scripting
mlua = { version = "^0.9", features = [
    "lua51",
    "vendored",
    "macros",
    "unstable",
], optional = true }
# optional -> player
crossbeam-channel = { version = "^0.5", optional = true }
afplay = { git = "https://github.com/emuell/afplay", default-features = false, features = [
    "cpal-output",
], optional = true }

[dev-dependencies]
notify = { version = "^6.1" }
ctrlc = { version = "3.4.0" }

[profile.release]
debug = 1

[features]
dhat-profiler = ["dhat"]
scripting = ["mlua"]
player = ["crossbeam-channel", "afplay"]
default = ["scripting"]

[[example]]
name = "play"
required-features = ["player"]

[[example]]
name = "play-script"
required-features = ["scripting", "player"]
