[package]
name = "afseq"
version = "0.3.0"
edition = "2021"
description = "Experimental, dynamic, imperative and functional music sequence generator for Rust and Lua"
authors = ["Eduard Müller <mail@emuell.net>"]
exclude = ["assets", "examples"]
categories = ["audio", "midi", "sequencer"]

[dependencies]
lazy_static = { version = "^1.4" }
anyhow = { version = "^1.0" }
paste = { version = "^1.0" }
derive_more = { version = "^0.99" }
log = { version = "^0.4" }
simplelog = { version = "^0.12" }
rand = { version = "^0.8" }
rand_xoshiro = { version = "^0.6" }
fraction = { version = "^0.15" }
pest = { version = "^2.7" }
pest_derive = { version = "^2.7" }

# optional -> dhat-profiler
dhat = { version = "^0.3", optional = true }

# optional -> player
crossbeam-channel = { version = "^0.5", optional = true }
afplay = { git = "https://github.com/emuell/afplay", default-features = false, features = [
    "cpal-output",
], optional = true }

# optional -> scripting
mlua = { version = "^0.9", default-features = false, features = [
    "vendored",
    "macros",
    "unstable",
], optional = true }

[dev-dependencies]
notify = { version = "^6.1" }
ctrlc = { version = "^3.4" }
criterion = { version = "^0.5" }

[profile.release]
debug = 1

[features]
dhat-profiler = ["dhat"]
player = ["crossbeam-channel", "afplay"]
scripting = ["mlua", "mlua/luajit"]
scripting-no-jit = ["mlua", "mlua/lua51"]
# NB: disable default-features when enabling no-jit!
default = ["scripting"]

[lib]
bench = false

[[bench]]
name = "benches"
harness = false

[[example]]
name = "play"
required-features = ["player"]

[[example]]
name = "play-script"
required-features = ["scripting", "player"]
